<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScoreKeeperMainActivity">

    <Button
        android:id="@+id/btn_scoreAInc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="67dp"
        android:onClick="scoreIncTeamA"
        android:text="@string/btn_scoreAInc" />

    <Button
        android:id="@+id/btn_scoreBInc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="67dp"
        android:onClick="scoreIncTeamB"
        android:text="@string/btn_scoreBInc" />

    <TextView
        android:id="@+id/tv_teamA"
        android:layout_width="86dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="67dp"
        android:layout_marginTop="30dp"
        android:text="@string/tv_teamA"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/tv_teamB"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/btn_scoreBInc"
        android:layout_alignTop="@+id/tv_teamA"
        android:text="@string/tv_teamB"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="72dp"
        android:onClick="onRestartGame"
        android:text="@string/btn_reset" />

    <TextView
        android:id="@+id/tv_teamAScore"
        android:layout_width="80dp"
        android:layout_height="67dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/btn_scoreAInc"
        android:layout_marginTop="123dp"
        android:ems="10"
        android:text="@string/tv_teamAScore"
        android:inputType="number" />

    <TextView
        android:id="@+id/tv_teamBScore"
        android:layout_width="87dp"
        android:layout_height="67dp"
        android:layout_alignEnd="@+id/btn_scoreBInc"
        android:layout_alignTop="@+id/tv_teamAScore"
        android:ems="10"
        android:text="@string/tv_teamBScore"
        android:inputType="number" />

</RelativeLayout>